--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -120,6 +120,28 @@ expand = true
   derived_types = ['TECLDP']
   mode = 'c'
 
+[transformations.hip-parametrise]
+  classname = 'SccCufTransformationNew'
+  module = 'transformations.scc_cuf'
+[transformations.hip-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'hip'
+
+[transformations.hip-hoist]
+  classname = 'SccCufTransformationNew'
+  module = 'transformations.scc_cuf'
+[transformations.hip-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'hip'
+
 # For SCC-CUF-parametrise we need to define the
 # in-source replacement via "dic2p".
 [transformations.ParametriseTransformation]
