renaming mode within new SCC CUF trafo

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -107,7 +107,7 @@ expand = true
   vertical = '%dimensions.vertical%'
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
-  mode = 'c'
+  mode = 'cuda'
 
 [transformations.c-hoist]
   classname = 'SccCufTransformationNew'
@@ -118,7 +118,7 @@ expand = true
   vertical = '%dimensions.vertical%'
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
-  mode = 'c'
+  mode = 'cuda'
 
 [transformations.hip-parametrise]
   classname = 'SccCufTransformationNew'
