Overwrite frontend for header modules

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -35,3 +35,16 @@ block = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 [dimensions.block_dim]
   size = 'NGPBLKS'
   index = 'IBL'
+
+
+# Overwrite frontend for header modules that cannot be parsed via OMNI
+[frontend_args]
+
+[frontend_args."yomphyder.F90"]
+frontend = 'FP'
+
+[frontend_args."yomcst.F90"]
+frontend = 'FP'
+
+[frontend_args."yoethf.F90"]
+frontend = 'FP'
