--- a/src/cloudsc_sycl_sp/CMakeLists.txt
+++ b/src/cloudsc_sycl_sp/CMakeLists.txt
@@ -16,6 +16,16 @@ if( HAVE_CLOUDSC_SYCL )
 
     if ( HAVE_SINGLE_PRECISION )
 
+     if (CLOUDSC_MATH STREQUAL "C")
+        set(GPU_MATH "1")
+     elseif (CLOUDSC_MATH STREQUAL "STD")
+        set(GPU_MATH "2")
+     elseif(CLOUDSC_MATH STREQUAL "SYCL")
+        set(GPU_MATH "3")
+     else ()
+        set(GPU_MATH "1")
+     endif()
+
     ecbuild_add_library(
         TARGET dwarf-cloudsc-scc-sycl-lib
         INSTALL_HEADERS LISTED
@@ -41,6 +51,10 @@ if( HAVE_CLOUDSC_SYCL )
 	    ${CLOUDSC_DEFINITIONS}
     )
 
+    target_compile_definitions(dwarf-cloudsc-scc-sycl-lib PUBLIC C_MATH=1)
+    target_compile_definitions(dwarf-cloudsc-scc-sycl-lib PUBLIC STD_MATH=2)
+    target_compile_definitions(dwarf-cloudsc-scc-sycl-lib PUBLIC SYCL_MATH=3)
+    target_compile_definitions(dwarf-cloudsc-scc-sycl-lib PUBLIC GPU_MATH=${GPU_MATH})
 
     ecbuild_add_executable(
         TARGET  dwarf-cloudsc-scc-sycl-sp
@@ -82,6 +96,11 @@ if( HAVE_CLOUDSC_SYCL )
             ${CLOUDSC_DEFINITIONS}
     )
 
+    target_compile_definitions(dwarf-cloudsc-scc-hoist-sycl-lib PUBLIC C_MATH=1)
+    target_compile_definitions(dwarf-cloudsc-scc-hoist-sycl-lib PUBLIC STD_MATH=2)
+    target_compile_definitions(dwarf-cloudsc-scc-hoist-sycl-lib PUBLIC SYCL_MATH=3)
+    target_compile_definitions(dwarf-cloudsc-scc-hoist-sycl-lib PUBLIC GPU_MATH=${GPU_MATH})
+
     ecbuild_add_executable(
         TARGET  dwarf-cloudsc-scc-hoist-sycl-sp
         SOURCES dwarf_cloudsc.cpp
@@ -122,6 +141,11 @@ if( HAVE_CLOUDSC_SYCL )
         DEFINITIONS
             ${CLOUDSC_DEFINITIONS}
     )
+
+    target_compile_definitions(dwarf-cloudsc-scc-k-caching-sycl-lib PUBLIC C_MATH=1)
+    target_compile_definitions(dwarf-cloudsc-scc-k-caching-sycl-lib PUBLIC STD_MATH=2)
+    target_compile_definitions(dwarf-cloudsc-scc-k-caching-sycl-lib PUBLIC SYCL_MATH=3)
+    target_compile_definitions(dwarf-cloudsc-scc-k-caching-sycl-lib PUBLIC GPU_MATH=${GPU_MATH})
 
     ecbuild_add_executable(
         TARGET  dwarf-cloudsc-scc-k-caching-sycl-sp
