Loki: Adjust CUDA-speific loki config file to Loki v0.2.0

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -6,11 +6,13 @@ strict = true  # Throw exceptions during dicovery
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
-disable = ['timer%start', 'timer%end', 'timer%thread_start', 'timer%thread_end',
-           'timer%thread_log', 'timer%thread_log', 'timer%print_performance',
-           'performance_timer%start', 'performance_timer%end', 'performance_timer%thread_start',
-           'performance_timer%thread_end', 'performance_timer%thread_log',
-           'performance_timer%thread_log', 'performance_timer%print_performance']
+disable = [
+    'timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
+    'ceiling', 'dim3', 'cuda*'
+]
+
+# Prune the tree for these to ensure they are not processed by transformations
+block = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 
 # Define entry point for call-tree transformation
 [routines]
