Update loki version to 0.2.0 and field_api to 0.3.0

--- a/bundle.yml
+++ b/bundle.yml
@@ -35,7 +35,7 @@ projects :
 
     - loki :
         git     : https://github.com/ecmwf-ifs/loki
-        version : main
+        version : v0.2.0
         optional: true
         require : ecbuild
         cmake   : >
@@ -54,7 +54,7 @@ projects :
 
     - field_api :
         git     : https://github.com/ecmwf-ifs/field_api.git
-        version : main
+        version : 0.3.0
         optional: true
         require : ecbuild
         cmake   : >
