Loki: enable imports and mark headers as ignored instead of blocked

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -3,6 +3,7 @@
 role = 'kernel'
 expand = true  # Automatically expand subroutine calls
 strict = true  # Throw exceptions during dicovery
+enable_imports = true  # Chase dependencies incurred via imports
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
@@ -12,7 +13,7 @@ disable = [
 ]
 
 # Prune the tree for these to ensure they are not processed by transformations
-block = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
+ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 
 # Define entry point for call-tree transformation
 [routines]
