--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -3,13 +3,14 @@
 role = 'kernel'
 expand = true  # Automatically expand subroutine calls
 strict = true  # Throw exceptions during dicovery
+enable_imports = true  # Chase dependencies incurred via imports
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
 disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop']
 
 # Prune the tree for these to ensure they are not processed by transformations
-block = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
+ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 
 # Define entry point for call-tree transformation
 [routines]
