Loki: Mark CUF module as disabled

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -9,7 +9,7 @@ enable_imports = true  # Chase dependencies incurred via imports
 # do not attempt to look up the source files for these.
 disable = [
     'timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
-    'ceiling', 'dim3', 'cuda*'
+    'ceiling', 'dim3', 'cuda*', 'yoethf_cuf', 'yomcst_cuf',
 ]
 
 # Prune the tree for these to ensure they are not processed by transformations
