Loki: Add Loki-SCC pipeline configuration

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -37,6 +37,48 @@ ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
   size = 'NGPBLKS'
   index = 'IBL'
 
+# Define individual transformations for inclusion in pipelines
+[transformations]
+
+[transformations.RemoveCallsTransformation]
+  module = 'transformations.utility_routines'
+[transformations.RemoveCallsTransformation.options]
+  routines = ['DR_HOOK', 'ABOR1', 'WRITE(NULOUT']
+
+[transformations.ModuleWrapTransformation]
+  module = 'loki.transform'
+[transformations.ModuleWrapTransformation.options]
+  module_suffix = '_MOD'
+
+[transformations.SCCDependencyTrafo]
+  classname = 'DependencyTransformation'
+  module = 'loki.transform'
+[transformations.SCCDependencyTrafo.options]
+  suffix = '_SCC'
+  module_suffix = '_MOD'
+
+
+[transformations.SCCVectorNoTrim]
+  classname  = 'SCCVectorPipeline'
+  module     = 'transformations.single_column_coalesced'
+[transformations.SCCVectorNoTrim.options]
+  horizontal = '%dimensions.horizontal%'
+  vertical   = '%dimensions.vertical%'
+  block_dim  = '%dimensions.block_dim%'
+  directive  = 'openacc'
+  trim_vector_sections = false
+
+
+# Define bulk-transformation pipelines for each "mode"
+[pipelines]
+
+[pipelines.scc]
+  transformations = [
+    'RemoveCallsTransformation',
+    'SCCVectorNoTrim',
+    'ModuleWrapTransformation',
+    'SCCDependencyTrafo',
+  ]
 
 # Overwrite frontend for header modules that cannot be parsed via OMNI
 [frontend_args]
