--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_hip)
 add_subdirectory(cloudsc_sycl)
 add_subdirectory(cloudsc_gpu)
+add_subdirectory(cloudsc_gpu_atlas)
 add_subdirectory(cloudsc_loki)
