--- a/bundle.yml
+++ b/bundle.yml
@@ -65,7 +65,7 @@ projects :
 
     - atlas :
         git     : https://github.com/ecmwf/atlas
-        version : feature/gpu-fields-nproma
+        version : develop
         optional: true
         require : ecbuild eckit fckit
         cmake   : >
