--- a/bundle.yml
+++ b/bundle.yml
@@ -100,10 +100,10 @@ options :
     - with-gpu :
         help  : Enable GPU kernels
         cmake : >
-            ENABLE_CLOUDSC_GPU_SCC=OFF
-            ENABLE_CLOUDSC_GPU_SCC_HOIST=OFF
-            ENABLE_CLOUDSC_GPU_SCC_K_CACHING=OFF
-            ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=OFF
+            ENABLE_CLOUDSC_GPU_SCC=ON
+            ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
+            ENABLE_CLOUDSC_GPU_SCC_K_CACHING=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
             ATLAS_ENABLE_ACC=ON
             ATLAS_ENABLE_CUDA=ON
 
@@ -111,9 +111,9 @@ options :
         help  : Enable GPU kernel variants based on CUDA and CUDA-Fortran
         cmake : >
             ENABLE_CUDA=ON
-            ENABLE_CLOUDSC_GPU_SCC_CUF=OFF
-            ENABLE_CLOUDSC_GPU_SCC_CUF_K_CACHING=OFF
-            BUILD_field_api=OFF
+            ENABLE_CLOUDSC_GPU_SCC_CUF=ON
+            ENABLE_CLOUDSC_GPU_SCC_CUF_K_CACHING=ON
+            BUILD_field_api=ON
 
     - with-hip :
         help: Enable GPU kernel variant based on HIP
