--- a/bundle.yml
+++ b/bundle.yml
@@ -52,6 +52,7 @@ projects :
     - field_api :
         git     : https://github.com/ecmwf-ifs/field_api.git
         version : v0.3.0
+        optional: true
         require : ecbuild
         cmake   : >
             UTIL_MODULE_PATH=${CMAKE_SOURCE_DIR}/cloudsc-dwarf/src/common/module
