--- a/src/cloudsc_gpu_atlas/CMakeLists.txt
+++ b/src/cloudsc_gpu_atlas/CMakeLists.txt
@@ -52,7 +52,7 @@ if( HAVE_CLOUDSC_GPU_SCC_ATLAS )
     )
 
     # Importantly, we add the "pinned" flag to the linker command to ensure pinning!
-    #if( CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC" )
-    #    target_link_options( dwarf-cloudsc-gpu-scc-atlas PUBLIC "-gpu=pinned" )
-    #endif()
+    if( CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC" )
+        target_link_options( dwarf-cloudsc-gpu-scc-atlas PUBLIC "-gpu=pinned" )
+    endif()
 endif()
