1) use atlas::FieldSet GPU-functions instead of relying on multiple calls to atlas::Field GPU-ones; 2) add scc-hoist-atlas

--- a/src/cloudsc_gpu_atlas/CMakeLists.txt
+++ b/src/cloudsc_gpu_atlas/CMakeLists.txt
@@ -6,13 +6,20 @@
 # granted to it by virtue of its status as an intergovernmental organisation
 # nor does it submit to any jurisdiction.
 
-# Define this dwarf variant as an ECBuild feature
-ecbuild_add_option( FEATURE CLOUDSC_GPU_SCC_ATLAS
-    DESCRIPTION "Build the GPU version CLOUDSC using Atlas and Serialbox" DEFAULT ON
-    CONDITION atlas_FOUND AND ENABLE_CUDA AND (Serialbox_FOUND OR HDF5_FOUND)
+
+ecbuild_add_option( FEATURE CLOUDSC_GPU_SCC
+    DESCRIPTION "Build optimized GPU version of CLOUDSC based on Atlas + OpenACC" DEFAULT OFF
+    CONDITION atlas_FOUND AND HAVE_CUDA AND (Serialbox_FOUND OR HDF5_FOUND)
 )
 
-if( HAVE_CLOUDSC_GPU_SCC_ATLAS )
+
+ecbuild_add_option( FEATURE CLOUDSC_GPU_SCC_HOIST
+    DESCRIPTION "Build optimized GPU version of CLOUDSC using SCC with hoisted temporary arrays (based on Atlas + OpenACC)" DEFAULT OFF
+    CONDITION atlas_FOUND AND HAVE_CUDA AND (Serialbox_FOUND OR HDF5_FOUND)
+)
+
+
+if( HAVE_CLOUDSC_GPU_SCC )
     ecbuild_add_executable(
         TARGET dwarf-cloudsc-gpu-scc-atlas
         SOURCES
@@ -21,26 +28,13 @@ if( HAVE_CLOUDSC_GPU_SCC_ATLAS )
             expand_atlas_mod.F90
             validate_atlas_mod.F90
             ../cloudsc_gpu/cloudsc_gpu_scc_mod.F90
-            cloudsc_driver_mod.F90
+            cloudsc_driver_scc_mod.F90
             dwarf_cloudsc_atlas.F90
         LIBS
             atlas_f
             cloudsc-common-lib
-        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_ATLAS
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC
     )
-
-    # Create symlink for the input data
-    if( HAVE_SERIALBOX )
-      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-          ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
-    endif()
-
-    if( HAVE_HDF5 )
-      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-          ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/input.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../input.h5 )
-      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-          ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/reference.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../reference.h5 )
-    endif()
 
     ecbuild_add_test(
         TARGET dwarf-cloudsc-gpu-scc-atlas
@@ -50,9 +44,52 @@ if( HAVE_CLOUDSC_GPU_SCC_ATLAS )
         OMP 1
         ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M"
     )
+endif()
 
-    # Importantly, we add the "pinned" flag to the linker command to ensure pinning!
-    if( CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC" )
-        target_link_options( dwarf-cloudsc-gpu-scc-atlas PUBLIC "-gpu=pinned" )
-    endif()
+
+if( HAVE_CLOUDSC_GPU_SCC_HOIST )
+    ecbuild_add_executable(
+        TARGET dwarf-cloudsc-gpu-scc-hoist-atlas
+        SOURCES
+            nlev_mod.F90
+            cloudsc_global_atlas_state_mod.F90
+            expand_atlas_mod.F90
+            validate_atlas_mod.F90
+            ../cloudsc_gpu/cloudsc_gpu_scc_hoist_mod.F90
+            cloudsc_driver_scc_hoist_mod.F90
+            dwarf_cloudsc_atlas.F90
+        LIBS
+            atlas_f
+            cloudsc-common-lib
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_HOIST
+    )
+
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-gpu-scc-hoist-atlas
+        COMMAND bin/dwarf-cloudsc-gpu-scc-hoist-atlas
+        ARGS 1 1000 128
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        OMP 1
+    )
+endif()
+
+
+# Create symlink for the input data
+if( HAVE_SERIALBOX )
+  execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+      ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
+endif()
+
+
+if( HAVE_HDF5 )
+  execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+      ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/input.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../input.h5 )
+  execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+      ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/reference.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../reference.h5 )
+endif()
+
+
+# Importantly, we add the "pinned" flag to the linker command to ensure pinning!
+if( CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC" )
+    target_link_options( dwarf-cloudsc-gpu-scc-atlas PUBLIC "-gpu=pinned" )
 endif()
