Enable writing compile commands JSON

--- a/bundle.yml
+++ b/bundle.yml
@@ -5,6 +5,7 @@ name    : cloudsc-bundle
 version : 1.0.0-develop
 cmake : >
         CMAKE_LINK_DEPENDS_NO_SHARED=ON
+        CMAKE_EXPORT_COMPILE_COMMANDS=ON
         BUILD_serialbox=OFF
         BUILD_field_api=OFF
         BUILD_eckit=OFF
