adapt cloudsc_gpu_atlas to use host memory pinning + device mapping in Atlas Field

--- a/src/cloudsc_gpu_atlas/CMakeLists.txt
+++ b/src/cloudsc_gpu_atlas/CMakeLists.txt
@@ -90,6 +90,6 @@ endif()
 
 
 # Importantly, we add the "pinned" flag to the linker command to ensure pinning!
-if( CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC" )
-    target_link_options( dwarf-cloudsc-gpu-scc-atlas PUBLIC "-gpu=pinned" )
-endif()
+#if( CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC" )
+#    target_link_options( dwarf-cloudsc-gpu-scc-atlas PUBLIC "-gpu=pinned" )
+#endif()
